# workshop-template

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/actions/: package-lock.json  package.json
.github/actions/junit-md-comment/: action.yml  index.js
.github/workflows/: comment_pr.yml  test.yml
docs/: index.md
tests/: __init__.py  test_gonca_god.py
workshop/: __init__.py  gonca_god.py
