[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "workshop"
version = "0.1.0"
description = "Template para workshops utilizando python para as turmas da residência de Robótica e IA do projeto CRIAR-CIn/Softex"
readme = "README.md"
authors = [
  {name = "Mateus Goncalves Machado", email = "mateus.gm@gmail.com"}
]
maintainers = [
  {name = "Mateus Goncalves Machado", email = "mateus.gm@gmail.com"}
]
classifiers = [

]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
]

[project.urls]

bugs = "https://github.com/Curso-de-Robotica-e-IA/workshop-template/issues"
homepage = "https://github.com/Curso-de-Robotica-e-IA/workshop-template"

[tool.setuptools]
package-dir = {"" = "workshop"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]


[tool.setuptools.dynamic]
version = {attr = "workshop.__version__"}

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

# Optional: Per-directory overrides for flexibility in boilerplates with tests or examples.
[[tool.ty.overrides]]
match = ["tests/**.py"]
rules.TY016 = "ignore"  # Ignore invalid-assignment in tests, e.g., for dynamic fixtures.
rules.TY029 = "ignore"  # Ignore invalid-return-type in tests.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]